# DevTools

./: .gitignore  @todo.md  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
devtools/: __init__.py  cli.py
devtools/changelog/: __init__.py  cli.py  generator.py
devtools/commitgen/: __init__.py  cli.py  generator.py  git.py
devtools/gitignore/: __init__.py  cli.py  detector.py  generator.py
devtools/hooks/: cli.py
devtools/licensegen/: __init__.py  cli.py  generator.py
devtools/shared/: __init__.py  ai.py  config.py  git.py
devtools_utils.egg-info/: PKG-INFO  SOURCES.txt
scripts/: format.py  lintfix.py
